--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,6 +67,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
+    padding-bottom: 5rem;
 }
 
 .hero-img {
